added skeletal structure

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
     <header>
     <h1>Brian's To Do Lists</h1>
     </header>
-    
-    <for
+
+    <form>
+        <input type="text" class="todo-input">
+        <button class="todo-button" type="submit"></button>
+        <i class="fas fa-plus-square"></i>
+    </form>
 
 <script src="./assets/main.js"></script>
 </body>
