Basic Structure Done

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <i class="fas fa-plus-square"></i>
     </form>
 
+    <div class="todo-container">
+    <ul class="todo-list"></ul>
+    </div>
+
 <script src="./assets/main.js"></script>
 </body>
 </html>
