--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 </head>
 <body>
     <header>
-    <h1>Brian's To Do Lists</h1>
+    <h1>My To Do List</h1>
     </header>
 
     <form>
-        <input type="text" class="todo-input">
-        <button class="todo-button" type="submit"></button>
+        <input type="text" class="todo-input"/>
+        <button class="todo-button" type="submit">
         <i class="fas fa-plus-square"></i>
+        </button>
     </form>
 
     <div class="todo-container">
