Basic js structure done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>To do App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" 
     crossorigin="anonymous" 
@@ -28,7 +28,12 @@
     </form>
 
     <div class="todo-container">
-    <ul class="todo-list"></ul>
+    <ul class="todo-list">
+        <div class="todo">
+            <button>Delete</button>
+            <button>Checked</button>
+        </div>
+    </ul>
     </div>
 
 <script src="./assets/main.js"></script>
